WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201671
REGRESSION (
r233780
): After swiping to navigate back, pinching to zoom in on webcontent snaps back to zoomed out when letting go
https://bugs.webkit.org/show_bug.cgi?id=201671
Summary
REGRESSION (r233780): After swiping to navigate back, pinching to zoom in on ...
Tim Horton
Reported
2019-09-10 18:23:51 PDT
REGRESSION (
r233780
): After swiping to navigate back, pinching to zoom in on webcontent snaps back to zoomed out when letting go
Attachments
Patch
(2.38 KB, patch)
2019-09-10 18:24 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-09-10 18:24:00 PDT
Created
attachment 378528
[details]
Patch
Tim Horton
Comment 2
2019-09-10 18:24:02 PDT
<
rdar://problem/50488372
>
WebKit Commit Bot
Comment 3
2019-09-10 21:51:35 PDT
Comment on
attachment 378528
[details]
Patch Clearing flags on attachment: 378528 Committed
r249754
: <
https://trac.webkit.org/changeset/249754
>
WebKit Commit Bot
Comment 4
2019-09-10 21:51:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug