REGRESSION (r233780): After swiping to navigate back, pinching to zoom in on webcontent snaps back to zoomed out when letting go https://bugs.webkit.org/show_bug.cgi?id=201671 <rdar://problem/50488372>

Reviewed by Simon Fraser.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::didCommitLoad):
Reset m_lastTransactionIDWithScaleChange, since it is not guaranteed
to only march forward. Otherwise, we can get stuck with a very large
m_lastTransactionIDWithScaleChange, and will not allow stable-state
user-driven zooms until the current transactionID exceeds it.


Canonical link: https://commits.webkit.org/215321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249754 268f45cc-cd09-0410-ab3c-d52691b4dbfc